src/style.css
/* Variables */

:root {
  --color-bg-primary: white;
  --color-bg-secondary: #56817A;
  --color-bg-tertiary: rgb(240,240,240);
  --color-primary: black;
  --color-secondary: grey;
  --gap-micro: .1em;
  --gap-tiny: .165em;
  --gap-small: .25em;
  --gap-medium: .5em;
  --gap-large: .75em;
  --gap-xlarge: 1em;
}


@font-face {
  font-family: 'Josefin Sans';
  font-style: normal;
  font-weight: 300;
  src: local('Josefin Sans Light'), local('JosefinSans-Light'), url(https://fonts.gstatic.com/s/josefinsans/v14/Qw3FZQNVED7rKGKxtqIqX5Ecpl5te10k.ttf) format('truetype');
}

@font-face {
  font-family: 'Josefin Sans';
  font-style: normal;
  font-weight: 700;
  src: local('Josefin Sans Bold'), local('JosefinSans-Bold'), url(https://fonts.gstatic.com/s/josefinsans/v14/Qw3FZQNVED7rKGKxtqIqX5Ectllte10k.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: italic;
  font-weight: 300;
  src: local('Lato Light Italic'), local('Lato-LightItalic'), url(https://fonts.gstatic.com/s/lato/v16/S6u_w4BMUTPHjxsI9w2_Gwfo.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: italic;
  font-weight: 400;
  src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v16/S6u8w4BMUTPHjxsAXC-v.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: italic;
  font-weight: 700;
  src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v16/S6u_w4BMUTPHjxsI5wq_Gwfo.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 300;
  src: local('Lato Light'), local('Lato-Light'), url(https://fonts.gstatic.com/s/lato/v16/S6u9w4BMUTPHh7USSwiPHA.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v16/S6uyw4BMUTPHjx4wWw.ttf) format('truetype');
}

@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 700;
  src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v16/S6u9w4BMUTPHh6UVSwiPHA.ttf) format('truetype');
}

html {
  background: white;
}

body {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 400;
  background: white;
  margin: 50px 0 100px;
  letter-spacing: .3px;
  color: #39424B;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-transform: none;
  margin: 0;
}

h1 {
  font-family: "Josefin Sans", Helvetica, Arial, sans-serif;
  font-weight: 700;
  font-size: 40px;
  letter-spacing: 1px;
}

h2 {
  font-family: "Josefin Sans", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: .5px;
}

h3 {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 14px;
  letter-spacing: .4px;
}

h3.bold {
  font-weight: 700;
}

h4 {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 12px;
}

h4.bold {
  font-weight: 700;
}

h5 {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 11px;
}

h5.italic {
  font-style: italic;
}

h6 {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-size: 10px;
  color: gray;
}

a {
  color: inherit;
  text-decoration: inherit;
}

a:hover {
  color: #2895F1;
}

a .fa-external-link {
  font-size: 10px;
  vertical-align: text-top;
}

p,
li {
  font-size: 11px;
  text-align: justify;
  margin-top: var(--gap-small);
  margin-bottom: var(--gap-small);
}

blockquote {
  font-size: 11px;
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-style: italic;
  margin: 0;
  text-align: justify;
}

em {
  color: #999;
}

ul {
  margin: 0 0 0 1em;
  padding: 0em;
}

ul li {
  padding-left: 10px;
}

ul.minimal {
  list-style: none;
  padding: 0;
}

ul.minimal li {
  margin-bottom: 3px;
  padding-left: 0;
}

ul.two-column {
  -webkit-column-count: 2;
  -webkit-column-gap: 28px;
  column-count: 2;
  column-gap: 28px;
}

ul.two-column li {
  padding-left: 0;
}

i {
  margin-right: var(--gap-small);
  color: var(--color-primary);
}

@page {
  size: A4;
}
 
/* General */
section {
  margin-top: var(--gap-large);
}

.keyline {
  width: 100%;
  margin: var(--gap-tiny) 0 var(--gap-medium);
  border-top: solid var(--color-bg-secondary) var(--gap-micro);
}

.sublink {
  font-size: 70%;
  font-weight: 200;
  color: dimgray;
}

.uppercase {
  text-transform: uppercase;
}

.capitalize {
  text-transform: capitalize;
}

.chip {
  padding: var(--gap-small);
  background: var(--color-bg-tertiary);
  border-radius: 5px;
  color: var(--color-primary);
}

.bullet {
  width: var(--gap-medium);
  height: var(--gap-medium);
  border-radius: 50%;
  background: var(--color-bg-secondary);
  align-self: center;
  justify-self: center;
}

.line {
  width: var(--gap-micro);
  height: 100%;
  background: var(--color-bg-secondary);
  align-self: center;
  justify-self: center;
}

/* Common */
.row {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  gap: var(--gap-small);
}

.column {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: var(--gap-small);
}

.grid {
  display: grid;
  grid-template-columns: var(--gap-medium) auto;
  grid-template-rows: auto;
  column-gap: var(--gap-medium);
}

.top {
  align-items: first baseline;
}

.fill {
  flex-grow: 1;
}

.fit {
  min-width: fit-content;
}

.end {
  align-items: flex-end;
}

.centre {
  justify-content: center;
}

.align-center {
  align-items: center;
}

.narrow {
  margin-top: var(--gap-small);
}

.wide {
  gap: var(--gap-large);
}

.between {
  justify-content: space-between;
}

.wrap {
  flex-wrap: wrap;
}

.large {
  font-size: 12px;
}

.inherit-height {
  min-height: inherit;
}

/* Sections */
.profiles + section {
  margin-top: 0;
}

.company + .position {
  margin-top: var(--gap-large);
}

.position {
  margin-top: var(--gap-medium);
  margin-left: calc(2.0em - calc(var(--gap-medium) / 2));
}

/* Header Section */
.profile-pic {
  margin-top: -5px;
  margin-right: 18px;
}

.profile-pic img {
  height: 52px;
  width: 52px;
  border-radius: 50%;
  border: 2px solid #56817A;
}

/* Skills Section */
.skills {
  min-width: 12%;
  margin-right: var(--gap-medium);
}

/* Company Section */
.company {
  min-height: 4em;
}

.logo {
  width: 4em;
  border: 1px solid var(--color-bg-secondary);
}

/* Position Section */
.space {
  margin-top: var(--gap-medium);
}

/* Reference Section */
.left {
  align-self: flex-start;
}

.right {
  align-self: flex-end;
}

/* Layouts */
.page {
  background: var(--color-bg-primary);
  width: 612px;
  min-height: 792px;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  border-top: 10px solid var(--color-bg-secondary);
  padding: 34px;
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
}

/* Adjustments for Printing */
@media print {
  body {
    margin: 0;
  }

  .page {
    width: 90%; /* FIXME: Not sure why this overflows the page if set to 100% */
    height: 100%;
    margin: 0;
    box-shadow: none;
  }

  section :not(.work) {
    page-break-inside: avoid;
  }

  .no-print {
    display: none;
  }

  .fa-external-link {
    display: none;
  }
}

